v?:
* Added gpsd support
* Fixed various udp handling bugs

v1.3.1: September 27th 2015
* Fixed various uninitialised pointer fixes
* Updated Makefile for OpenWRT and github builds
* Accept NULL as a sentence terminator with "strict=no"
* Fixed problem with non-truncation of output files
* Better guessing of UDP interface parameters
* Define ACCESSPERMS, remove redundant declarations, add header guards
* Fixed bug in source filtering
* Added option to re-enable nagle for TCP interfaces
* "-d" flag now documented with additional debugging
* Default queue sizes reduced and SNDBUF size reduced
* Added optional interface to filter rules

v1.3: April 15th 2015
* Added "preamble" option to tcp interfaces
* Fixed bugs in failover specification parsing
* Added udp: interface type
* Added AIS coalescing
* Added strict parsing option
* Fixed bug in file output to new files

v1.2: January 6th 2015
* eol=n now optional on other interface types
* srctag=input option
* owner=,group= and perm= options for pty and output file interfaces
* Fixed bug in tcp server src TAGs
* Fixed multiple tcp persist bugs
* Remove pty symlinks on exit
* Updates for NetBSD portability
* Fixed TAG checksum bug

v1.1.1: November 12th 2014
* Added presist=fromstart option
* Fixed serial ports in OS X
* Fixed processing of file interfaces with "eol=rn"
* Fixed specification of multicast interface
* Fixed bug with outbound serial interface TAG processing
* Fixed bug with TAG timestamps
* Added fromstart value for persist option
* Minor comment corrections
* Minor changes for greater POSIX compatibility

v1.1: June 5th 2014
* Parsing algorithm changed to strip TAG blocks
* Added optional TAG-based timestamping
* Added optional TAG-based source identifiers
* Added GoFree support
* Added loopback option
* Added keepalive options to tcp interfaces
* Added timeout option to tcp interfaces
* Added more supported baud rates for serial and pty interfaces