@@ -1,5 +1,5 @@
 kplex: A multiplexer for various nmea 0183 interfaces
-Copyright Keith Young 2012-2015 <stripydog7@gmail.com>
+Copyright Keith Young 2012-2016 <stripydog7@gmail.com>
 Blurb:
 Details of the GPLv3 under which this software is distributed can be found in
 the file COPYING in this directory.
@@ -127,16 +127,20 @@ where:
         "ifilter": Specifies an input filter (see below)
         "ofilter": Specifies an output filter (see below)
         "name": Attaches a symbolic name to an interface.  This is only required
-        if you intend to use the interface for failover (see below).  The value
-        associated with "name" can be any string consisting of letters and or
-        numbers which is not used as the "name" for another interface.  Names
-        are NOT case sensitive, so do not call one interface "Serial" and
-        another "serial".
+        if you intend to use the interface for failover (see below) but can be
+        helpful for debugging.  The value associated with "name" can be any
+        string consisting of letters and or numbers which is not used as the
+        "name" for another interface.  If no "name" is assigned kplex will
+        autogenerate one starting with an underscore ('_').  For this reason
+        names starting with an underscore should not be manually assigned.
+        Names are NOT case sensitive, so do not call one interface "Serial" and
+        another "serial". 
         "srctag": Specifies that an NMEA-0183v4 TAG block containing a source
         identifier be prepended to sentences output on the interface if the
         value is "yes" or "input".  The src identification string is the
         interface name (see the "name" option above) truncated to 15 characters
-        or the string "kplex" if no "name" is specified for the interface. A TAG
+        or the string "kplex" if the interface name starts with an underscore
+        as is the case with autogenerated (non-user-specified) names. A TAG
         block prepended by the "srctag=yes" option looks like:
         \s:kplex*23\
         If "srctag=no" is specified, no source identifier is prepended.  This is
